.happypack/s-284332615
SyntaxError: Unexpected token, expected , (120:42)

[0m [90m 118 | [39m              let transform [33m=[39m stack[33m.[39mreplace([35m/\d/g[39m[33m,[39m[32m'/'[39m)[33m.[39mreplace([35m/\./g[39m[33m,[39m[32m' '[39m)[33m;[39m
 [90m 119 | [39m              [90m// console.log(`<b>${transform}:</b> ${obj[property]}`);[39m
[31m[1m>[22m[39m[90m 120 | [39m              [36mreturn[39m([33m<[39m[33mb[39m[33m>[39m${transform}[33m:[39m[33m<[39m[33m/[39m[33mb[39m[33m>[39m ${obj[property]})[33m;[39m
 [90m     | [39m                                          [31m[1m^[22m[39m
 [90m 121 | [39m            }[36melse[39m{
 [90m 122 | [39m              [90m// console.log(`<b>${property}:</b> ${obj[property]}`);[39m
 [90m 123 | [39m              [36mreturn[39m([33m<[39m[33mb[39m[33m>[39m${property}[33m:[39m[33m<[39m[33m/[39m[33mb[39m[33m>[39m ${obj[property]})[33m;[39m[0m

Error
    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)